WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137551
[iOS] Crash in CFURLDownloadClient.didFail if the download has a null resumeData
https://bugs.webkit.org/show_bug.cgi?id=137551
Summary
[iOS] Crash in CFURLDownloadClient.didFail if the download has a null resumeData
Andy Estes
Reported
2014-10-09 00:16:08 PDT
[iOS] Crash in CFURLDownloadClient.didFail if the download has a null resumeData
Attachments
Patch
(1.76 KB, patch)
2014-10-09 00:19 PDT
,
Andy Estes
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2014-10-09 00:19:18 PDT
Created
attachment 239522
[details]
Patch
Andy Estes
Comment 2
2014-10-09 00:19:49 PDT
rdar://problem/17316756
David Kilzer (:ddkilzer)
Comment 3
2014-10-09 02:43:13 PDT
Comment on
attachment 239522
[details]
Patch r=me
Alexey Proskuryakov
Comment 4
2014-10-09 10:56:02 PDT
Do we have steps to reproduce? Does this happen with all servers that don't support resuming?
Andy Estes
Comment 5
2014-10-09 11:08:21 PDT
(In reply to
comment #4
)
> Do we have steps to reproduce?
No, this is a speculative fix based on looking at crash reports.
> Does this happen with all servers that don't support resuming?
I don't know how to answer that question. I know that CFURLDownloadCopyResumeData() can return null and that we should handle it (this patch aligns our behavior with that of the Mac; e.g. passing a 0-length DataReference to DownloadProxy::didFail).
Andy Estes
Comment 6
2014-10-09 11:16:25 PDT
Committed
r174512
: <
http://trac.webkit.org/changeset/174512
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug