[iOS] Crash in CFURLDownloadClient.didFail if the download has a null resumeData https://bugs.webkit.org/show_bug.cgi?id=137551

Reviewed by David Kilzer.

CFDataGetBytePtr() and CFDataGetLength() crash if passed a null value.

* Shared/Downloads/ios/DownloadIOS.mm:
(WebKit::setUpDownloadClient):

Canonical link: https://commits.webkit.org/155394@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174512 268f45cc-cd09-0410-ab3c-d52691b4dbfc